--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
+    "project-version": "^1.2.0",
     "tslib": "^1"
   },
   "devDependencies": {
