--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "bugs": "https://github.com/kkeeth/word-count-markdown/issues",
   "dependencies": {
+    "@cw-types/colors": "^1.1.4",
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
