--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "rootDir": "src",
     "strict": true,
     "target": "es2017",
-    "typeRoots": ["types", "node_modules/@types"]
+    "typeRoots": ["node_modules/@cw-types", "node_modules/@types"]
   },
   "include": [
     "src/**/*"
