--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@cw-types/colors": "^1.1.4",
     "@oclif/command": "^1",
     "@oclif/config": "^1",
-    "@oclif/plugin-help": "^2",
+    "@oclif/plugin-help": "^2.2.3",
     "project-version": "^1.2.0",
     "tslib": "^1"
   },
@@ -41,7 +41,10 @@
   "license": "MIT",
   "main": "lib/index.js",
   "oclif": {
-    "bin": "wcmd"
+    "bin": "wcmd",
+    "plugins": [
+      "@oclif/plugin-help"
+    ]
   },
   "repository": "kkeeth/word-count-markdown",
   "scripts": {
