--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "repository": "kkeeth/word-count-markdown",
   "scripts": {
-    "posttest": "eslint . --ext .ts --config .eslintrc",
+    "lint": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc -b && oclif-dev readme",
     "test": "echo NO TESTS",
     "version": "oclif-dev readme && git add README.md"
