--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2.2.3",
+    "colors": "^1.4.0",
     "project-version": "^1.2.0",
     "tslib": "^1"
   },
